--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,25 @@
 theme: jekyll-theme-minimal
+title: Code With Behnam
+description: A personal blog where I share my knowledge and experiences
+author: Behnam Ebrahimi
+baseurl: ""
+url: "https://CodeWithBehnam.github.io"
+github_username: CodeWithBehnam
+linkedin_username: behnamebrahimi
+
+# Build settings
+markdown: kramdown
+plugins:
+  - jekyll-feed
+  - jekyll-seo-tag
+  - jekyll-paginate
+
+paginate: 5
+paginate_path: "/blog/page:num/"
+
+# Exclude from processing
+exclude:
+  - Gemfile
+  - Gemfile.lock
+  - node_modules
+  - vendor
