Update LinkedIn username in _config.yml for accuracy
- Changed the LinkedIn username from 'behnamebrahimi' to 'behnam-ebrahimi-7b417473' to reflect the correct account information.

--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ author: Behnam Ebrahimi
 baseurl: ""
 url: "https://CodeWithBehnam.github.io"
 github_username: CodeWithBehnam
-linkedin_username: behnamebrahimi
+linkedin_username: behnam-ebrahimi-7b417473
 
 # Site settings
 lang: en
