--- a/_config.yml
+++ b/_config.yml
@@ -55,3 +55,15 @@ exclude:
   - vendor
   - README.md
   - LICENSE
+
+# Site taxonomy
+tag_dir: tags
+category_dir: categories
+
+# Plugin settings
+safe: false
+whitelist:
+  - jekyll-feed
+  - jekyll-seo-tag
+  - jekyll-paginate
+  - jekyll-sitemap
