--- a/_config.yml
+++ b/_config.yml
@@ -113,6 +113,7 @@ defaults:
       related: true
       toc: true
       toc_sticky: true
+      classes: wide
   # _pages
   - scope:
       path: "_pages"
